fixed: notification overlap

--- a/src/shell/components/Notify/Notification/Notification.less
+++ b/src/shell/components/Notify/Notification/Notification.less
@@ -7,7 +7,7 @@
   bottom: 0;
   left: 0;
   padding: 1rem;
-  margin-top: 10px;
+  margin-top: 1.3rem;
   max-width: 45rem;
   min-height: 20px;
   background-color: @zesty-white;
